some change to avoid overlap

--- a/style.css
+++ b/style.css
@@ -50,9 +50,7 @@ body{
 	margin: 0;
 	color:azure;
 }
-.footer {
-	min-height: 5vh;
-}
 .nounikey {
 	color: greenyellow;
+	margin-top: 10vh;
 }
